// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<Link
  disabled={false}
  onPress={[Function]}
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#696969"
  />
</Link>
`;

exports[`renders disabled 1`] = `
<Link
  disabled={true}
  onPress={[Function]}
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#696969"
  />
</Link>
`;

exports[`renders selected 1`] = `
<Link
  disabled={false}
  onPress={[Function]}
>
  <IconStar
    fillColour="#006699"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</Link>
`;
